--- a/htmx/templates/3-external-api.html
+++ b/htmx/templates/3-external-api.html
@@ -5,4 +5,7 @@
         <p class="text-gray-500 text-md">Example of how go+htmx work with external api</p>
     </div>
 </div>
+<div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+    <h2>Pokemon</h2>
+</div>
 {{ end }}
