--- a/htmx/templates/4-web-socket.html
+++ b/htmx/templates/4-web-socket.html
@@ -4,5 +4,6 @@
         <h1 class="text-3xl font-bold tracking-tight text-gray-900">Web Socket</h1>
         <p class="text-gray-500 text-md">Example of how go+htmx work with Web Socket</p>
     </div>
+    <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8"></div>
 </div>
 {{ end }}
