fix template name

--- a/htmx/templates/layout.html
+++ b/htmx/templates/layout.html
@@ -26,12 +26,14 @@
 <body>
     {{template "nav-bar" .}}
     <main id="content">
-        {{ template "content" . }}
+        {{ template "HX-Response" . }}
     </main>
 </body>
 
 </html>
 {{ end }}
+
+
 
 {{define "nav-bar"}}
 <header class="min-h-full ">
