--- a/htmx/templates/poke-response.html
+++ b/htmx/templates/poke-response.html
@@ -28,7 +28,7 @@
 </div>
 {{end}}
 
-{{define "content"}}
+{{define "HX-Response"}}
 {{template "poke-card" .}}
 {{template "poke-form" .}}
 {{end}}
