--- a/htmx/templates/layout.html
+++ b/htmx/templates/layout.html
@@ -56,6 +56,8 @@
                                 hx-get="/external-api" hx-target="#content" hx-swap="innerHTML">External Api</a>
                             <a class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium cursor-pointer"
                                 hx-get="/web-socket" hx-target="#content" hx-swap="innerHTML">Web Socket</a>
+                            <a class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium cursor-pointer"
+                                hx-get="/oob-update" hx-target="#content" hx-swap="innerHTML">Oob update</a>
                         </div>
                     </div>
                 </div>
