--- a/htmx/templates/layout.html
+++ b/htmx/templates/layout.html
@@ -58,10 +58,15 @@
                                 hx-get="/web-socket" hx-target="#content" hx-swap="innerHTML">Web Socket</a>
                             <a class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium cursor-pointer"
                                 id="oob-target" hx-get="/oob-update" hx-target="#content" hx-swap="innerHTML"
-                                hx-swap-oob="true">Oob
-                                update
-                                <span>{{.Count}}</span>
+                                hx-swap-oob="true">
+                                Oob update
+                                <span id="oob-span" hx-get="/get-count" hx-trigger="load" hx-target="#oob-span"
+                                    hx-swap="outerHTML"
+                                    class="inline-flex items-center px-2 text-white bg-red-500 rounded-full shadow-md">
+                                    {{.Count}}
+                                </span>
                             </a>
+
                         </div>
                     </div>
                 </div>
