--- a/htmx/templates/oob-response.html
+++ b/htmx/templates/oob-response.html
@@ -1,11 +1,7 @@
 {{ define "HX-Response" }}
-
 <h1 id="counter">Count = {{.Count}}</h1>
-<a class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium cursor-pointer"
-    id="oob-target" hx-get="/oob-update" hx-target="#content" hx-swap="innerHTML" hx-swap-oob="true">Oob
-    update
-    <span class="inline-flex items-center px-2 text-white bg-red-500 rounded-full shadow-md">
-        {{.Count}}
-    </span>
-</a>
+<span id="oob-span" hx-swap-oob="true"
+    class="inline-flex items-center px-2 text-white bg-red-500 rounded-full shadow-md">
+    {{.Count}}
+</span>
 {{ end }}
